hphp/test/quick/interface9.php.expectf
Test begin

Fatal error: Declaration of C::foo() must be compatible with that of I::foo() in %s on line 8
